Dev: add resource cases.